# multiformat.rs

./: Cargo.toml  README.md
.github/: renovate.js
.github/workflows/: build.yaml  renovate.yaml
src/: lib.rs
src/multibase/: encoding.rs  mod.rs
src/rfc4648/: mod.rs  ntets.rs  test.rs  tests.rs
