[package]
name = "multiformat"
version = "0.1.0"
edition = "2021"
authors = ["Jack Maloney <git@jmmaloney4.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
num = "0.4.0"
rand = "0.8.4"
deku = "0.12.4"
bitvec = "*"
itertools = "0.10.1"
