[package]
name = "multiformat"
version = "0.1.0"
edition = "2021"
authors = ["Jack Maloney <git@jmmaloney4.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
num = "0.4.1"
rand = "0.8.5"
deku = "0.16.0"
bitvec = "*"
itertools = "0.12.1"
